added the cloudinary and the animateur controller with swagger
