# app/Http/Controllers/EpisodeController.php
@@ -16,7 +16,7 @@ class EpisodeController extends Controller
 /**
  * @OA\Get(
  *     path="/api/podcasts/{id}/episodes",
- *     tags={"episode"},
+ *     tags={"Episode"},
  *     summary="Liste des episode pour a specific podcast",
  *     description="Retrieve a list of all episode for a specific podcast.",
  *     @OA\Response(
@@ -70,6 +70,38 @@ class EpisodeController extends Controller
     /**
      * Store a newly created resource in storage.
      */
+
+/**
+ * @OA\Post(
+ *     path="/api/podcasts/{id}/episodes",
+ *     tags={"Episode"},
+ *     summary="Add Episode to a podcast EndPoint",
+ *     
+ *        
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\JsonContent(
+ *             required={"titre","description","fichier_audio"},
+ *             @OA\Property(property="titre", type="string", example="test"),
+ *             @OA\Property(property="description", type="string", example="description test"),
+ *             @OA\Property(property="fichier_audio", type="string", example="url//test"),
+ *             
+ *             
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Succès",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="status", type="string", example="Success"),
+ *             @OA\Property(property="timestamp", type="string", example="2025-10-13 11:45:00"),
+ *             @OA\Property(property="message", type="string", example="episode created successfully")
+ *         )
+ *     )
+ * 
+ * )
+ */
     public function store(StoreEpisodeRequest $request , $id)
     {
         $podcast= Podcast::find($id);
@@ -99,6 +131,46 @@ class EpisodeController extends Controller
     /**
      * Display the specified resource.
      */
+
+/**
+ * @OA\Get(
+ *     path="/api/episodes/{id}",
+ *     tags={"Episode"},
+ *     summary="one episode details",
+ *     description="Retrieve a episode.",
+ *      @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         required=true,
+ *         description="ID of the episode to retriev",
+ *         @OA\Schema(type="integer", example=101)
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Succès",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="status", type="string", example="Success"),
+ *             @OA\Property(property="timestamp", type="string", example="2025-10-13 11:45:00"),
+ *             @OA\Property(property="message", type="string", example="episode retrieved successfully"),
+ *              @OA\Property(
+ *                 property="data",
+ *                 type="array",
+ *                 @OA\Items(
+ *                     type="object",
+ *                      @OA\Property(property="id", type="integer", example="1"),
+ *                      @OA\Property(property="titre", type="string", example="test"),
+ *                      @OA\Property(property="description", type="string", example="description test"),
+ *                      @OA\Property(property="fichier_audio", type="string", example="url//test"),
+ *                      @OA\Property(property="image_url", type="string", example="url//test"),
+ *                      @OA\Property(property="podcast_id", type="integer", example="1"),
+
+ *                 )
+ *             )
+ *         )
+ *     )
+ * )
+ */
     public function show($id)
     {
         $episode = Episode::find($id);
@@ -119,6 +191,48 @@ class EpisodeController extends Controller
     /**
      * Update the specified resource in storage.
      */
+
+/**  @OA\Put(
+ *     path="/api/episodes/{id}",
+ *     summary="Update an existing episode",
+ *     description="Update an episode by ID.",
+ * 
+ *     tags={"Episode"},
+ *
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         required=true,
+ *         description="ID of the episode to update",
+ *         @OA\Schema(type="integer", example=101)
+ *     ),
+ *
+ *     @OA\RequestBody(
+ *         required=true,
+ *         description="podcast update payload",
+ *         @OA\JsonContent(
+ *             required={"titre","description","fichier_audio"},
+ *             @OA\Property(property="titre", type="string", example="test"),
+ *             @OA\Property(property="description", type="string", example="description test"),
+ *             @OA\Property(property="fichier_audio", type="string", example="url//test"),
+ *             
+ *             
+ *         )
+ *     ),
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="episode updated successfully",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="status", type="string", example="Success"),
+ *             @OA\Property(property="timestamp", type="string", example="2025-10-13 11:45:00"),
+ *             @OA\Property(property="message", type="string", example="episode updated successfully")
+ *         )
+ *  
+ *    )
+ * )
+ */
     public function update(UpdateEpisodeRequest $request, $id)
     {
         $episode= Episode::findOrFail($id);
@@ -145,6 +259,34 @@ class EpisodeController extends Controller
     /**
      * Remove the specified resource from storage.
      */
+
+/** @OA\Delete(
+ *     path="/api/episodes/{id}",
+ *     summary="Delete an episode",
+ *     description="Delete an existing episode by its ID.",
+ *     tags={"Episode"},
+ *
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         required=true,
+ *         description="ID of the episode to delete",
+ *         @OA\Schema(type="integer", example=101)
+ *     ),
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="episode deleted successfully",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="status", type="string", example="Success"),
+ *             @OA\Property(property="timestamp", type="string", example="2025-10-13 11:45:00"),
+ *             @OA\Property(property="message", type="string", example="episode deleted successfully")
+ *         )
+ *  
+ *    )
+ *)
+*/
     public function destroy($id)
     {
         $episode= Episode::findOrFail($id);
