# app/Http/Requests/UpdatePodcastRequest.php
@@ -25,7 +25,7 @@ class UpdatePodcastRequest extends FormRequest
             "titre"=>"required|string|max:255",
             "description"=>"required|string|max:255",
             "category"=>"required|string|max:255",
-            "image_url"=> "required|string|max:255"
+            "image"=> "sometimes|image|max:4048"
         ];
     }
 }
